--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "3.1.64",
         "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
