fix role pusdatren

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=PUSDATREN
 APP_ENV=local
 APP_KEY=base64:S8+tiydLH3ullstINGjUs0toCorTXzBBAOUaiEY=
 APP_DEBUG=true
@@ -48,13 +48,31 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_MAILER=log
+# MAIL_SCHEME=null
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=sipatren@gmail.com
+# MAIL_PASSWORD=qoawdvwwlwqfliie
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=sipatren@gmail.com
+# MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=pusdatren@gmail.com
+MAIL_PASSWORD=dbxtqpepayasjgth
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=pusdatren@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
